--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     /* atributo contai ele vai cobrir apenas a area determinada da tag */ 
     /* aqui nos temos um exemplo de como definir tudo acima em uma unica linha */
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 
 }
 body * {
@@ -200,3 +201,13 @@ footer a {
     text-decoration: none;
 }
 
+/* media queries */
+
+@media (min-widht:700px) {
+    :root {
+        --bg--url: url(./assets/bg-desktop.jpg)
+    }
+    .light {
+        --bg--url: url(./assets/bg-desktop-light.jpg)
+    }
+}
