--- a/style.css
+++ b/style.css
@@ -84,8 +84,7 @@ body * {
 /* switch */
 
 #switch {
-    position: relative;
-    border: 1px solid green;
+    position: relative; 
     width: 64px;
 
     margin: 4px auto;
@@ -103,13 +102,16 @@ body * {
     left: 0;    
     z-index: 1;
     transform: translateY(-50%);
-   
+    
+    animation: slide-back 0.4s;
 }
 
 .light #switch button {
-    transition: 0.5;
-    right: 0;   
-    left: initial;
+   animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span{
@@ -210,4 +212,26 @@ footer a {
     .light {
         --bg--url: url(./assets/bg-desktop-light.jpg)
     }
+}
+
+/* animation */
+
+@keyframes slide-in {
+   from{
+    left: 0;
+   } 
+   to {
+    left: 50%;
+   } 
+   
+}
+
+@keyframes slide-back {
+    from{
+        left: 50%;
+       } 
+       to {
+        left: 0;
+       }  
+    
 }
